--- a/package.json
+++ b/package.json
@@ -17,7 +17,6 @@
   "devDependencies": {
     "browser-sync": "^2.27.7",
     "del": "^6.0.0",
-    "fs": "0.0.1-security",
     "gulp": "^4.0.2",
     "gulp-autoprefixer": "^8.0.0",
     "gulp-clean-css": "^4.3.0",
@@ -25,7 +24,7 @@
     "gulp-fonter": "^0.3.0",
     "gulp-group-css-media-queries": "^1.2.2",
     "gulp-if": "^3.0.0",
-    "gulp-imagemin": "7.0.0",
+    "gulp-imagemin": "^8.0.0",
     "gulp-less": "^5.0.0",
     "gulp-newer": "^1.4.0",
     "gulp-notify": "^4.0.0",
